part II is done

--- a/Ch07_CarDealer/CarDealer.Web/Views/Shared/_Layout.cshtml
+++ b/Ch07_CarDealer/CarDealer.Web/Views/Shared/_Layout.cshtml
@@ -46,11 +46,22 @@
                     <li class="dropdown">  
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Cars <span class="caret"></span>  </a>  
                         <ul class="dropdown-menu">  
+                            <li><a href="/cars/create">Add Car</a></li>
+                            <li><a href="/cars/byMake">By Make</a></li>
                             <li><a href="/cars/all">All</a></li>  
-                            <li><a href="/cars/parts">All with Parts</a></li>  
+                            <li><a href="/cars/parts">All with Parts</a></li>
                         </ul>  
                     </li>  
                     
+                    
+                    <li class="dropdown">  
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Parts <span class="caret"></span>  </a>  
+                        <ul class="dropdown-menu">  
+                            <li><a href="/parts/create">Add Part</a></li> 
+                            <li><a href="/parts/all">All Parts</a></li>
+                        </ul>  
+                    </li>  
+
 
                     <li class="dropdown">  
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Sales <span class="caret"></span>  </a>  
