--- a/Ch07_CarDealer/CarDealer.Web/Views/Cars/All.cshtml
+++ b/Ch07_CarDealer/CarDealer.Web/Views/Cars/All.cshtml
@@ -1,9 +1,44 @@
-﻿@model IEnumerable<CarWithPartsModel>
+﻿@model CarPageListingViewModel
 @{
     ViewData["Title"] = "All Cars";
 }
 <h2>@ViewData["Title"]</h2>
-    <table class="table table-bordered table-hover">
+
+
+@{
+    string previousDisabled = Model.CurrentPage <= 1 ? "disabled" : string.Empty;
+    string nextDisabled = Model.CurrentPage >= Model.TotalPages ? "disabled" : string.Empty;
+
+    int rangeStart = (Model.CurrentPage - 5) < 1 ? 1 : (Model.CurrentPage - 5);
+    int rangeEnd = (Model.CurrentPage + 5) > Model.TotalPages ? Model.TotalPages : (Model.CurrentPage + 5);
+}
+
+<ul class="pagination">
+    <li class="page-item @previousDisabled">
+        <a class="page-link @previousDisabled" href="/cars/all?page=@Model.PreviousPage" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+        </a>
+    </li>
+
+
+    @for (int i = @rangeStart; i <= @rangeEnd; i++)
+    {
+        <li class="page-item @(Model.CurrentPage==i ? "active" : string.Empty)"><a class="page-link" href="/cars/all?page=@i">@i</a></li>
+    }
+
+    <li class="page-item @nextDisabled">
+        <a class="page-link @nextDisabled" href="/cars/all?page=@Model.NextPage" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+        </a>
+    </li>
+</ul>
+<br />
+
+
+
+<table class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th>
@@ -21,7 +56,7 @@
         </thead>
 
         <tbody>
-        @foreach (var car in Model)
+        @foreach (var car in Model.Cars)
         {
             <tr>
                 <td>
