--- a/Ch07_CarDealer/CarDealer.Web/Views/Cars/ByMake.cshtml
+++ b/Ch07_CarDealer/CarDealer.Web/Views/Cars/ByMake.cshtml
@@ -1,40 +1,63 @@
-﻿@model CarsByMakeModel
+﻿@model CarsByMakeChoiseModel
 
 @{
-    ViewData["Title"] = $"{Model.Make} Cars";
+    ViewData["Title"] = "Cars By Make";
 }
 
 <h2>@ViewData["Title"]</h2>
 
-<table class="table table-bordered table-hover">
-    <thead>
-    <tr>
-        <th>
-            Make
-        </th>
-        <th>
-            Model
-        </th>
-        <th>
-            Travelled Distance
-        </th>
-    </tr>
-    </thead>
-    
-    <tbody>
-    @foreach (var car in Model.Cars)
-    {
-        <tr>
-            <td>
-                @car.Make
-            </td>
-            <td>
-                @car.Model
-            </td>
-            <td>
-                @car.TravelledDistance km
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+
+<div class="row">
+    <div class="col-md-4">
+        <form method="get">
+
+            <div class="form-group">
+                <select asp-for="Make" asp-items="@Model.Makers" class="form-control"> </select>
+            </div>
+
+            <div>
+                <a class="btn btn-default btn-lg" href="/cars/all">Back</a>                
+                <input class="btn btn-success btn-lg" type="submit" value="Submit"/>
+            </div>
+        </form>
+    </div>
+</div>
+<br />
+
+<div class="row">
+    <div class="col-md-10">
+
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        Make
+                    </th>
+                    <th>
+                        Model
+                    </th>
+                    <th>
+                        Travelled Distance
+                    </th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var car in Model.Cars)
+                {
+                    <tr>
+                        <td>
+                            @car.Make
+                        </td>
+                        <td>
+                            @car.Model
+                        </td>
+                        <td>
+                            @car.TravelledDistance km
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
