--- a/Ch07_CarDealer/CarDealer.Web/wwwroot/css/site.css
+++ b/Ch07_CarDealer/CarDealer.Web/wwwroot/css/site.css
@@ -26,6 +26,11 @@
     margin: 15px;
 }
 
+a.disabled {
+    pointer-events: none;
+}
+
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
